--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Graydon_Headshot.jpg" alt="">
             <h5>Graydon Briguglio</h5>
-            <p class="font-weight-light mb-0">Founder | <a href="https://www.linkedin.com/in/graydonbriguglio/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0">Co-Founder | <a href="https://www.linkedin.com/in/graydonbriguglio/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
