--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
                 <i class="fas fa-envelope-square fa-2x fa-fw"></i>
               </a>
             </li>
-            <li class="list-inline-item mr-3">
-              <a href="https://www.linkedin.com/company/shelvesplatform">
-                <i class="fab fa-linkedin fa-2x fa-fw"></i>
+			<li class="list-inline-item mr-3">
+              <a href="https://discord.gg/dBU7FzD">
+                <i class="fab fa-discord fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item mr-3">
@@ -203,6 +203,11 @@
             <li class="list-inline-item">
               <a href="https://www.instagram.com/shelvesplatform/">
                 <i class="fab fa-instagram fa-2x fa-fw"></i>
+              </a>
+            </li>
+			<li class="list-inline-item mr-3">
+              <a href="https://www.linkedin.com/company/shelvesplatform">
+                <i class="fab fa-linkedin fa-2x fa-fw"></i>
               </a>
             </li>
           </ul>
