Updated TM year & contributors section

--- a/index.html
+++ b/index.html
@@ -125,27 +125,41 @@
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
     <div class="container">
-      <h2 class="mb-5">Meet The Team</h2>
+      <h2 class="mb-5">Meet The Contributors</h2>
       <div class="row">
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Graydon_Headshot.jpg" alt="">
             <h5>Graydon Briguglio</h5>
-            <p class="font-weight-light mb-0">Co-Founder | <a href="https://www.linkedin.com/in/graydonbriguglio/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/graydonbriguglio/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/Scott_Headshot.jpg" alt="">
-            <h5>Scott DelPrato</h5>
-            <p class="font-weight-light mb-0">Co-Founder | <a href="https://www.linkedin.com/in/scottdelprato/" target="_blank">LinkedIn</a></p>
+            <img class="img-fluid rounded-circle mb-3" src="img/Cam_Headshot.jpg" alt="">
+            <h5>Cam Graybill</h5>
+            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/cameron-graybill/" target="_blank">LinkedIn</a></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/Daron_Headshot.jpg" alt="">
+            <h5>Daron Arakelian</h5>
+            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/daron-arakelian-943540194/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Lou_Headshot.jpg" alt="">
             <h5>Louis Neal</h5>
-            <p class="font-weight-light mb-0">Co-Founder | <a href="https://www.linkedin.com/in/louis-neal-847024127/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/louis-neal-847024127/" target="_blank">LinkedIn</a></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/Scott_Headshot.jpg" alt="">
+            <h5>Scott DelPrato</h5>
+            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/scottdelprato/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
       </div>
@@ -181,7 +195,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Shelves Platform LLC 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Shelves Platform LLC 2022. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
