Fix filename ref

--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/Cam_Headshot.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/Cam_Headshot.jpeg" alt="">
             <h5>Cam Graybill</h5>
             <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/cameron-graybill/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/Daron_Headshot.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/Daron_Headshot.jpeg" alt="">
             <h5>Daron Arakelian</h5>
             <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/daron-arakelian-943540194/" target="_blank">LinkedIn</a></p>
           </div>
