Added functional areas & intern

--- a/index.html
+++ b/index.html
@@ -131,35 +131,42 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Graydon_Headshot.jpg" alt="">
             <h5>Graydon Briguglio</h5>
-            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/graydonbriguglio/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0">Product | <a href="https://www.linkedin.com/in/graydonbriguglio/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Cam_Headshot.jpeg" alt="">
             <h5>Cam Graybill</h5>
-            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/cameron-graybill/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0">Architect | <a href="https://www.linkedin.com/in/cameron-graybill/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Daron_Headshot.jpeg" alt="">
             <h5>Daron Arakelian</h5>
-            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/daron-arakelian-943540194/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0">SWE | <a href="https://www.linkedin.com/in/daron-arakelian-943540194/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Lou_Headshot.jpg" alt="">
             <h5>Louis Neal</h5>
-            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/louis-neal-847024127/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0">SWE | <a href="https://www.linkedin.com/in/louis-neal-847024127/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/Scott_Headshot.jpg" alt="">
             <h5>Scott DelPrato</h5>
-            <p class="font-weight-light mb-0"><a href="https://www.linkedin.com/in/scottdelprato/" target="_blank">LinkedIn</a></p>
+            <p class="font-weight-light mb-0">SWE | <a href="https://www.linkedin.com/in/scottdelprato/" target="_blank">LinkedIn</a></p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/Coleman_Headshot.jpeg" alt="">
+            <h5>Coleman Briguglio</h5>
+            <p class="font-weight-light mb-0">SWE Intern | <a href="https://www.linkedin.com/in/cbrigug/" target="_blank">LinkedIn</a></p>
           </div>
         </div>
       </div>
@@ -205,7 +212,7 @@
               </a>
             </li>
 			<li class="list-inline-item mr-3">
-              <a href="https://discord.gg/dBU7FzD">
+              <a href="https://discord.gg/yPSWhwGABW">
                 <i class="fab fa-discord fa-2x fa-fw"></i>
               </a>
             </li>
