Updated assets to match latest version

--- a/index.html
+++ b/index.html
@@ -98,25 +98,45 @@
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.png');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/inventory.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy Inventory Management</h2>
-          <p class="lead mb-0">Add items to Shelves by scanning a barcode, searching for an item, or manually entering it.</p>
+          <h2>Complete Inventory Management</h2>
+          <p class="lead mb-0">Track all of your household's food easily by sorting it with tags within the application.</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.png');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Standardized Swipe Gestures</h2>
-          <p class="lead mb-0">Want to interact with an item? Just swipe left or right to take action. For example, did you just polish off that last bit of orange juice in the fridge? Mark it as consumed with a quick swipe!</p>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/add-item.png');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Several Ways To Add</h2>
+          <p class="lead mb-0">Add items to Shelves by scanning a barcode, searching for an item in our database, or manually entering it.</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.png');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/shopping-list.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Advanced Options</h2>
-          <p class="lead mb-0">Don't see what you're looking for when you swipe? Just tap on an item to see more options. Shelves offers quantity adjustments, shopping list modifications, and more!</p>
+          <h2>Develop Smarter Shopping Lists</h2>
+          <p class="lead mb-0">Create & check off shopping lists within the app. Shelves can help to make sure you are always remembering to buy your favorites with our essentials feature.</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/alerts.png');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Get Notified Before It's Too Late</h2>
+          <p class="lead mb-0">Stop wasting your hard earned money. Shelves alerts you <i>before</i> things are about to go bad. You can even customize these alerts to your liking.</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/receptacles.png');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Organize Multiple Areas</h2>
+          <p class="lead mb-0">Manage all your home's fridges, freezers, and pantries within the application.</p>
+        </div>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/network.png');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Involve The Whole Household</h2>
+          <p class="lead mb-0">Doesn't matter if you have a spouse, family, or roommate - share & manage the food contents of your home with others!</p>
         </div>
       </div>
     </div>
