--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Shelves App | Shelves Platform LLC</a>
+      <a class="navbar-brand" href="#">Shelves App</a>
       <a class="btn btn-primary" href="#">Sign Up</a>
     </div>
   </nav>
