--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-
+  <meta name="google-site-verification" content="tex2hUJxm7i_CYrZUXfOEE3MrAuls9ZlndrYDyJqqhw" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
