Added production app store links to site

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Shelves App</a>
-      <a class="btn btn-primary" href="#">Sign Up</a>
+      <a class="navbar-brand">Shelves App</a>
     </div>
   </nav>
 
@@ -43,16 +42,12 @@
           <h1 class="mb-5">Shelves is an intuitive cross platform application that helps users save time, money, and the environment by reducing food waste.</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+            <a href="https://apps.apple.com/ua/app/shelves-mobile/id1596608195">
+              <img src="img/iOS.svg" alt="iOS App Store">
+            </a> 
+            <a href="https://play.google.com/store/apps/details?id=com.shelves.mobile">
+              <img src="img/Android.png" width="155px" alt="Google Play Store">
+            </a>
         </div>
       </div>
     </div>
@@ -199,19 +194,19 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Want to sign up to hear more? Sign up now!</h2>
+          <h2 class="mb-4">Download today for your smartphone.</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
+          <div class="row">
+            <div class="col-xl-9 mx-auto">
+              <a href="https://apps.apple.com/ua/app/shelves-mobile/id1596608195">
+                <img src="img/iOS.svg" alt="iOS App Store">
+              </a> 
+              <a href="https://play.google.com/store/apps/details?id=com.shelves.mobile">
+                <img src="img/Android.png" width="155px" alt="Google Play Store">
+              </a>
             </div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
