Updated Discord link

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
                 <i class="fas fa-envelope-square fa-2x fa-fw"></i>
               </a>
             </li>
-			<li class="list-inline-item mr-3">
-              <a href="https://discord.gg/yPSWhwGABW">
+			      <li class="list-inline-item mr-3">
+              <a href="https://discord.gg/hqgGVYRztd">
                 <i class="fab fa-discord fa-2x fa-fw"></i>
               </a>
             </li>
@@ -241,7 +241,7 @@
                 <i class="fab fa-instagram fa-2x fa-fw"></i>
               </a>
             </li>
-			<li class="list-inline-item mr-3">
+			      <li class="list-inline-item mr-3">
               <a href="https://www.linkedin.com/company/shelvesplatform">
                 <i class="fab fa-linkedin fa-2x fa-fw"></i>
               </a>
